# 1024-bridge

./: README.md
.cursor/commands/: gen-test.md  start-code.md
.cursor/rules/: anchor-solana.mdc  docs.mdc  foundry-solidity.mdc
contracts/evm/: .gitignore  TEST-IMPLEMENTATION-SUMMARY.md  TEST-SUITE-COMPLETE.md  foundry.toml
contracts/evm/cache/: solidity-files-cache.json  test-failures
contracts/evm/docs/: API-SPEC.md  PROGRESS.md  README.md  TEST-PLAN.md
contracts/evm/src/: BridgeCore.sol  TokenVault.sol
contracts/evm/src/interfaces/: IBridgeCore.sol  ITokenVault.sol
contracts/evm/test/: AdminFunctions.t.sol  BridgeCore.t.sol  CrossChainBridge.t.sol  Integration.t.sol  TestSetup.sol  TokenVault.t.sol
contracts/evm/test/mocks/: MockERC20.sol
contracts/evm/test/utils/: TestHelpers.sol  TestSetup.sol  VAABuilder.sol
contracts/svm/: README.md
contracts/svm/bridge-programs/: Anchor.toml  DEPLOYMENT.md  fix-postvaa.js  package.json
contracts/svm/bridge-programs/programs/bridge-programs/: Cargo.toml
contracts/svm/bridge-programs/programs/bridge-programs/src/: lib.rs
contracts/svm/bridge-programs/programs/solana-core/: Cargo.toml
contracts/svm/bridge-programs/programs/solana-core/src/: error.rs  lib.rs  state.rs
contracts/svm/bridge-programs/programs/solana-core/src/instructions/: initialize.rs  mod.rs  post_message.rs  post_vaa.rs  set_paused.rs  update_guardian_set.rs
contracts/svm/bridge-programs/programs/solana-core/src/state/: bridge.rs  guardian_set.rs  mod.rs  posted_message.rs  posted_vaa.rs  sequence.rs
contracts/svm/bridge-programs/programs/token-bridge/: Cargo.toml
contracts/svm/bridge-programs/programs/token-bridge/src/: error.rs  lib.rs  state.rs
contracts/svm/bridge-programs/programs/token-bridge/src/state/: bridge_config.rs  mod.rs  token_binding.rs  wrapped_meta.rs
contracts/svm/bridge-programs/scripts/: README.md  initialize-testnet.ts  quick-deploy.sh  register-tokens.ts  verify-deployment.ts
contracts/svm/bridge-programs/tests/: TEST-UPDATE-SUMMARY.md  bridge-programs.ts  demo-crypto.test.ts  testnet-quick-test.ts
contracts/svm/bridge-programs/tests/e2e/: cross-chain.test.ts  e2e.test.ts
contracts/svm/bridge-programs/tests/integration/: integration.test.ts
contracts/svm/bridge-programs/tests/security/: skipped-validations.test.ts
contracts/svm/bridge-programs/tests/unit/: solana-core.test.ts  token-bridge.test.ts
contracts/svm/bridge-programs/tests/utils/: helpers.ts  setup.ts  vaa.ts
contracts/svm/bridge-programs/trident/: solana_core.ts  token_bridge.ts
contracts/svm/docs/: API-SPEC.md  PROGRESS.md  README.md  TEST-PLAN.md
docs/: API-SPEC.md  PROGRESS.md  TEST-PLAN.md
guardians/: Cargo.toml  TEST-SUITE-SUMMARY.md
guardians/docs/: API-SPEC.md  PROGRESS.md  TEST-PLAN.md
guardians/guardian-bin/: Cargo.toml
guardians/guardian-bin/src/: main.rs
guardians/guardian-core/: Cargo.toml
guardians/guardian-core/src/: aggregator.rs  api.rs  config.rs  lib.rs  p2p.rs  signer.rs  storage.rs  types.rs  utils.rs
guardians/guardian-evm/: Cargo.toml
guardians/guardian-evm/src/: lib.rs  watcher.rs
guardians/guardian-solana/: Cargo.toml
guardians/guardian-solana/src/: watcher.rs
guardians/tests/: README.md  e2e_tests.rs  integration_tests.rs  unit_tests.rs
guardians/tests/helpers/: fixtures.rs  mock_chain.rs  mod.rs  vaa_builder.rs
relayer/: .eslintrc.js  .gitignore  PROJECT-SUMMARY.md  README.md  jest.config.js  package.json  tsconfig.json
relayer/docs/: API-SPEC.md  PROGRESS.md  TEST-PLAN.md
relayer/test/: README.md  config.ts  setup.ts
relayer/test/e2e/: cross-chain.test.ts
relayer/test/integration/: evm.test.ts  guardian.test.ts  solana.test.ts
relayer/test/unit/: config.test.ts  events.test.ts  utils.test.ts  vaa.test.ts
relayer/test/utils/: mocks.ts  vaa.ts
