[workspace]
members = [
    "guardian-core",
    "guardian-evm",
    "guardian-solana",
    "guardian-bin",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha3 = "0.10"

guardian-core = { path = "guardian-core" }
guardian-evm = { path = "guardian-evm" }
guardian-solana = { path = "guardian-solana" }

[workspace.dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
proptest = "1.4"
serial_test = "3.0"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

