[package]
name = "guardian-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
libp2p = { version = "0.53.2", features = [
    "gossipsub",
    "tcp",
    "noise",
    "mplex",
    "identify",
    "kad",
    "ping"
] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
secp256k1 = { version = "0.28", features = ["recovery"] }
sha3 = "0.10"
bincode = "1.3"
prometheus = "0.13"
toml = "0.8"
chrono = "0.4"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
axum-test = "14.0"
