[package]
name = "guardian-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
guardian-core = { workspace = true }
solana-client = { version = "1.17.15", default-features = false }
solana-sdk = "1.17.15"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

