[package]
name = "solana-core"
version = "0.1.0"
description = "Solana Core Bridge Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = "1.14"
solana-program = "1.18"

