[package]
name = "token-bridge"
version = "0.1.0"
description = "Solana Token Bridge Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
byteorder = "1.5"
solana-core = { path = "../solana-core", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

